# storage_server

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
conf/: storage_server.json
include/: base64.cpp  base64.hpp  data_manager.hpp  logger.hpp  server.hpp  server_config.hpp  server_utils.hpp
src/: data_manager.cpp  server.cpp  server_config.cpp  server_utils.cpp
src/static/: index.html
test/: test_launch.cpp
